# moon

./: .gitignore  .testr.conf  MANIFEST.in  README.md  README.rst  TODO  TODO.md  Vagrantfile  __init__.py  bootstrap.sh  install.sh  manage.py  moon_server.py  moonserver.sh  requirements.txt  run_server.sh  settings.py  setup.cfg  setup.py  test-requirements.txt
crm/: README.md  admin.py
doc/: json_interfaces.xls  mongodb_inter-extension_example.json  test_api.py  test_api2.py  tests_infra.md
gi/: README.md  admin.py  models.py  settings.py  urls.py  views.py
gui/: .bowerrc  README.md  bower.json  models.py  settings.py  urls.py  urls_json.py  urls_pip.py  views.py  views_json.py  views_pip.py  wsgi.py
info_repository/: driver_dispatcher.py  models.py
inter_extension_manager/: __init__.py  driver_dispatcher.py  models.py
intra_extension_manager/: driver_dispatcher.py  models.py
log_repository/: __init__.py  authz_log.py  driver_dispatcher.py
moon/: README.md  settings.py  urls.py
moon_hook/: README.md
moon_server/: MANIFEST.in  README.rst  config.py  moon_server.py  requirements.txt  server.py  settings.py
moonwebview/: .bowerrc  MANIFEST.in  README.rst  bower.json  identified_api.txt  manage.py  setup.py
mrm/: README.md  admin.py  urls.py  views.py
openstack_driver/: README.md  moon_hook.py  setup.py
policy_repository/: README.md  policy_engine.py
tenant_repository/: driver_dispatcher.py  models.py
tests/: info_repository_test.py  intra_extension_manager_test.py  mrm_test.py  test_admin_interface.py  test_core_pdp.py  test_start_stop_vm.py
(+500 files in other folders)
