[metadata]
name = moon_server
version = 1.0
summary = Policy-based Security Management System for OpenStack
description-file =
    README.rst
author = Orange
author-email = ruan.he@orange.com
home-page = http://rebirthmonkey.github.io/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    moon_server
#scripts =

[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[pbr]
warnerrors = True
